--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,19 +1,62 @@
 @layer black {
-  :root:root {
+  :root,
+  :host {
     --sl-font: 'Geist Sans', sans-serif;
     --sl-font-mono: 'Geist Mono', monospace;
-
-    --radius: 0.5rem;
-
-    --sl-color-text-accent: var(--primary);
-
-    --sl-color-banner-text: var(--foreground);
   }
 
-  :root[data-theme='dark'] {
-    --sl-color-banner-bg: oklch(0.28 0.09 268);
-    --sl-color-banner-border: oklch(0.38 0.14 266);
+  /**
+   * Common
+   */
+  :root,
+  ::backdrop {
+    --sl-hue-base: 17;
+    --sl-hue-orange: 84;
+    --sl-hue-green: 164;
+    --sl-hue-blue: 274;
+    --sl-hue-purple: 314;
+    --sl-hue-red: 13;
 
+    --sl-text-2xs: 0.75rem;
+    --sl-text-xs: 0.75rem;
+    --sl-text-sm: 0.875rem;
+    --sl-text-base: 1rem;
+    --sl-text-lg: 1.125rem;
+    --sl-text-xl: 1.25rem;
+    --sl-text-2xl: 1.5rem;
+    --sl-text-3xl: 1.875rem;
+    --sl-text-4xl: 2.25rem;
+    --sl-text-5xl: 3rem;
+    --sl-text-6xl: 3.75rem;
+
+    --sl-text-h1: var(--sl-text-4xl);
+    --sl-text-h2: var(--sl-text-xl);
+    --sl-text-h3: var(--sl-text-lg);
+    --sl-text-h4: var(--sl-text-lg);
+    --sl-text-h5: var(--sl-text-lg);
+
+    --sl-nav-height: 3.5rem;
+
+    --sidebar-margin-left: max(
+      1rem,
+      calc(
+        (
+            100% - var(--__toc-width, var(--sl-sidebar-width)) - (2 * var(--__toc-width, 1.5rem)) -
+              var(--sl-content-inline-start, 0rem) - var(--sl-content-width) - 1rem
+          ) /
+          2
+      )
+    );
+  }
+
+  /**
+   * Dark mode
+   */
+  :root,
+  ::backdrop {
+    /**
+    * shadcn vars
+    */
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
@@ -32,14 +75,73 @@
     --border: oklch(1 0 0 / 10%);
     --input: oklch(1 0 0 / 15%);
     --ring: oklch(0.556 0 0);
-    --code-background: oklch(0.21 0.01 286);
-    --mark-background: oklch(0.37 0.01 286);
+
+    --sl-color-white: var(--primary);
+    --sl-color-gray-1: var(--foreground);
+    --sl-color-gray-2: var(--foreground);
+    --sl-color-gray-3: var(--foreground);
+    --sl-color-gray-4: var(--foreground);
+    --sl-color-gray-5: var(--border);
+    --sl-color-gray-6: var(--border);
+    --sl-color-gray-7: var(--foreground);
+    --sl-color-black: var(--background);
+
+    --sl-color-orange-low: oklch(24% 0.01 var(--sl-hue-orange));
+    --sl-color-orange: oklch(62% 0.115 var(--sl-hue-orange));
+    --sl-color-orange-high: oklch(92% 0.062 var(--sl-hue-orange));
+    --sl-color-orange-accent: oklch(96% 0.04 var(--sl-hue-orange));
+    --sl-color-orange-accent-invert: oklch(79% 0.162 var(--sl-hue-orange));
+    --sl-color-orange-alt: oklch(25.5% 0.01 var(--sl-hue-orange));
+    --sl-color-orange-alt-invert: oklch(42% 0.042 var(--sl-hue-orange));
+
+    --sl-color-green-low: oklch(20% 0.018 var(--sl-hue-green));
+    --sl-color-green: oklch(61% 0.115 var(--sl-hue-green));
+    --sl-color-green-high: oklch(86% 0.054 var(--sl-hue-green));
+    --sl-color-green-accent: oklch(93% 0.054 var(--sl-hue-green));
+    --sl-color-green-accent-invert: oklch(66% 0.14 var(--sl-hue-green));
+
+    --sl-color-blue-low: oklch(20% 0.02 var(--sl-hue-blue));
+    --sl-color-blue: oklch(56% 0.181 var(--sl-hue-blue));
+    --sl-color-blue-high: oklch(86% 0.054 var(--sl-hue-blue));
+    --sl-color-blue-accent: oklch(89% 0.05 var(--sl-hue-blue));
+    --sl-color-blue-accent-invert: oklch(66% 0.154 var(--sl-hue-blue));
+    --sl-color-blue-alt: oklch(21.5% 0.02 var(--sl-hue-blue));
+    --sl-color-blue-alt-invert: oklch(36% 0.034 var(--sl-hue-blue));
+
+    --sl-color-purple-low: oklch(22% 0.012 var(--sl-hue-purple));
+    --sl-color-purple: oklch(59% 0.166 var(--sl-hue-purple));
+    --sl-color-purple-high: oklch(86% 0.053 var(--sl-hue-purple));
+    --sl-color-purple-accent: oklch(92% 0.05 var(--sl-hue-purple));
+    --sl-color-purple-accent-invert: oklch(66% 0.153 var(--sl-hue-purple));
+    --sl-color-purple-alt: oklch(23.5% 0.012 var(--sl-hue-purple));
+    --sl-color-purple-alt-invert: oklch(36% 0.033 var(--sl-hue-purple));
+
+    --sl-color-red-low: oklch(20% 0.018 var(--sl-hue-red));
+    --sl-color-red: oklch(44% 0.151 var(--sl-hue-red));
+    --sl-color-red-high: oklch(87% 0.05 var(--sl-hue-red));
+    --sl-color-red-accent: oklch(92% 0.04 var(--sl-hue-red));
+    --sl-color-red-accent-invert: oklch(67% 0.15 var(--sl-hue-red));
+    --sl-color-red-alt: oklch(21.5% 0.018 var(--sl-hue-red));
+    --sl-color-red-alt-invert: oklch(37% 0.03 var(--sl-hue-red));
+
+    --sl-hue-accent: 164;
+    --sl-color-accent-low: oklch(14% 0.05 var(--sl-hue-accent));
+    --sl-color-accent: oklch(43% 0.15 var(--sl-hue-accent));
+    --sl-color-accent-high: oklch(1 0 var(--sl-hue-base));
+
+    --sl-color-bg-nav: var(--sl-color-black);
+    --sl-color-bg-sidebar: var(--sl-color-black);
+    --sl-color-backdrop-overlay: oklch(24% 0.002 var(--sl-hue-base) / 0.7);
   }
 
-  :root[data-theme='light'] {
-    --sl-color-banner-bg: oklch(0.97 0.01 255);
-    --sl-color-banner-border: oklch(0.55 0.22 263);
-
+  /**
+    * Light mode
+    */
+  :root[data-theme='light'],
+  [data-theme='light'] ::backdrop {
+    /**
+    * shadcn vars
+    **/
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
     --card: oklch(1 0 0);
@@ -58,7 +160,60 @@
     --border: oklch(0.922 0 0);
     --input: oklch(0.922 0 0);
     --ring: oklch(0.708 0 0);
-    --code-background: oklch(0.97 0 286);
-    --mark-background: oklch(0.92 0 286);
+
+    --sl-color-white: oklch(12% 0.005 var(--sl-hue-base));
+    --sl-color-gray-1: oklch(18% 0.007 var(--sl-hue-base));
+    --sl-color-gray-2: oklch(24% 0.01 var(--sl-hue-base));
+    --sl-color-gray-3: oklch(38% 0.015 var(--sl-hue-base));
+    --sl-color-gray-4: oklch(58% 0.02 var(--sl-hue-base));
+    --sl-color-gray-5: oklch(78% 0.015 var(--sl-hue-base));
+    --sl-color-gray-6: oklch(91% 0.01 var(--sl-hue-base));
+    --sl-color-gray-7: oklch(96% 0.005 var(--sl-hue-base));
+    --sl-color-black: oklch(100% 0 var(--sl-hue-base));
+
+    --sl-color-orange-low: oklch(96% 0.02 var(--sl-hue-orange));
+    --sl-color-orange: oklch(74% 0.15 var(--sl-hue-orange));
+    --sl-color-orange-high: oklch(44% 0.09 var(--sl-hue-orange));
+    --sl-color-orange-accent: oklch(42% 0.08 var(--sl-hue-orange));
+    --sl-color-orange-accent-invert: oklch(52% 0.15 var(--sl-hue-orange));
+    --sl-color-orange-alt: oklch(95% 0.03 var(--sl-hue-orange));
+    --sl-color-orange-alt-invert: oklch(78% 0.06 var(--sl-hue-orange));
+
+    --sl-color-green-low: oklch(96% 0.01 var(--sl-hue-green));
+    --sl-color-green: oklch(66% 0.14 var(--sl-hue-green));
+    --sl-color-green-high: oklch(43% 0.09 var(--sl-hue-green));
+    --sl-color-green-accent: oklch(36% 0.07 var(--sl-hue-green));
+    --sl-color-green-accent-invert: oklch(50% 0.1 var(--sl-hue-green));
+
+    --sl-color-blue-low: oklch(95% 0.02 var(--sl-hue-blue));
+    --sl-color-blue: oklch(66% 0.15 var(--sl-hue-blue));
+    --sl-color-blue-high: oklch(40% 0.102 var(--sl-hue-blue));
+    --sl-color-blue-accent: oklch(35% 0.1 var(--sl-hue-blue));
+    --sl-color-blue-accent-invert: oklch(52% 0.2 var(--sl-hue-blue));
+    --sl-color-blue-alt: oklch(93% 0.03 var(--sl-hue-blue));
+    --sl-color-blue-alt-invert: oklch(77% 0.05 var(--sl-hue-blue));
+
+    --sl-color-purple-low: oklch(95% 0.02 var(--sl-hue-purple));
+    --sl-color-purple: oklch(66% 0.15 var(--sl-hue-purple));
+    --sl-color-purple-high: oklch(40% 0.102 var(--sl-hue-purple));
+    --sl-color-purple-accent: oklch(35% 0.1 var(--sl-hue-purple));
+    --sl-color-purple-accent-invert: oklch(52% 0.2 var(--sl-hue-purple));
+    --sl-color-purple-alt: oklch(93% 0.03 var(--sl-hue-purple));
+    --sl-color-purple-alt-invert: oklch(77% 0.05 var(--sl-hue-purple));
+
+    --sl-color-red-low: oklch(95% 0.01 var(--sl-hue-red));
+    --sl-color-red: oklch(66% 0.15 var(--sl-hue-red));
+    --sl-color-red-high: oklch(42% 0.13 var(--sl-hue-red));
+    --sl-color-red-accent: oklch(38% 0.15 var(--sl-hue-red));
+    --sl-color-red-accent-invert: oklch(52% 0.2 var(--sl-hue-red));
+    --sl-color-red-alt: oklch(94% 0.02 var(--sl-hue-red));
+    --sl-color-red-alt-invert: oklch(78% 0.04 var(--sl-hue-red));
+
+    --sl-hue-accent: 160;
+    --sl-color-accent-low: oklch(86% 0.05 var(--sl-hue-accent));
+    --sl-color-accent: oklch(43% 0.15 var(--sl-hue-accent));
+    --sl-color-accent-high: oklch(22% 0.05 var(--sl-hue-accent));
+
+    --sl-color-backdrop-overlay: oklch(84% 0.003 var(--sl-hue-base) / 0.7);
   }
 }
