--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,365 +1,289 @@
 @layer black {
-  * {
-    border-color: var(--border);
-
-    scrollbar-width: thin;
-    scrollbar-color: var(--border) transparent;
+  header.header {
+    width: 100%;
+    -webkit-backdrop-filter: blur(1rem);
+    backdrop-filter: blur(1rem);
+    border-bottom-width: 1px;
+    border-style: dashed;
+    border-bottom-color: var(--border);
+    padding: 0;
+    background-color: color-mix(in oklab, var(--background) 60%, transparent);
   }
 
-  *,
-  :after :before {
-    box-sizing: border-box;
-    border: 0 solid #e5e7eb;
-  }
-
-  html {
-    line-height: 1.5;
-    -webkit-text-size-adjust: 100%;
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-    font-family: var(--sl-font), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-      'Segoe UI Symbol', 'Noto Color Emoji';
-    font-feature-settings: normal;
-    font-variation-settings: normal;
-    -webkit-tap-highlight-color: transparent;
-  }
-
-  body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    font-family: var(--sl-font), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-      'Segoe UI Symbol', 'Noto Color Emoji';
-
-    background-color: var(--background);
-    min-height: 100svh;
-
-    overscroll-behavior: none;
-    color: var(--foreground);
-    font-synthesis-weight: none;
-    text-rendering: optimizeLegibility;
-
-    margin: 0;
-    line-height: inherit;
-  }
-
-  .container-wrapper {
+  header.header > .header {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    border-color: color-mix(in oklab, var(--border) 30%, transparent);
-    border-right-style: solid;
-    border-left-style: solid;
-  }
-
-  @media (min-width: 1800px) {
-    .container-wrapper {
-      max-width: 1536px;
-      border-left-width: 1px;
-      border-right-width: 1px;
-    }
-  }
-
-  html[data-theme='dark'] .container-wrapper {
-    border-color: var(--border);
-  }
-
-  .container-section {
-    border-color: color-mix(in oklab, var(--border) 30%, transparent);
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-  }
-
-  html[data-theme='dark'] .container-section {
-    border-color: var(--border);
-  }
-
-  @media (min-width: 1536px) {
-    .container {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      max-width: 1536px;
-    }
+    max-width: 1400px;
+    border-style: dashed;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   @media (min-width: 1280px) {
-    .container {
+    header.header > .header {
       padding-left: 1.5rem;
       padding-right: 1.5rem;
-      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .header.header {
+      border-left: 1px dashed var(--sl-color-hairline);
+      border-right: 1px dashed var(--sl-color-hairline);
+    }
+  }
+
+  .title-wrapper {
+    margin-right: 1rem;
+  }
+
+  @media (min-width: 1024px) {
+    .title-wrapper {
+      margin-right: 1.5rem;
+    }
+  }
+
+  .site-title {
+    gap: 0.5rem;
+    font-weight: 700;
+    font-size: 1rem;
+  }
+
+  .title-wrapper > .site-title > img {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  @media (min-width: 800px) {
+    header.header > .header > div.sl-flex:has(site-search) {
+      justify-self: end;
+      min-width: 15rem;
+    }
+  }
+
+  site-search > button {
+    background-color: color-mix(in oklab, var(--muted) 50%, transparent);
+    color: var(--muted-foreground);
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-color: color-mix(in oklab, var(--input) 50%, transparent);
+    border-width: 1px;
+    border-radius: 0.5rem;
+    white-space: nowrap;
+    gap: 0.5rem;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 2rem;
+    display: inline-flex;
+    position: relative;
+  }
+
+  site-search > button > kbd {
+    font-weight: 500;
+    font-size: 10px;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    background-color: var(--muted);
+    border-width: 1px;
+    border-radius: 0.25rem;
+    gap: 0.25rem;
+    align-items: center;
+    height: 1.25rem;
+    top: 0.3rem;
+    right: 0.3rem;
+    position: absolute;
+    border-color: var(--border);
+  }
+
+  site-search > button > svg {
+    display: none;
+  }
+
+  @media (min-width: 1280px) {
+    site-search {
+      width: 16rem;
     }
   }
 
   @media (min-width: 1024px) {
-    .container {
-      max-width: 1024px;
+    site-search {
+      width: 14rem;
     }
   }
 
   @media (min-width: 768px) {
-    .container {
-      max-width: 768px;
+    site-search {
+      width: 10rem;
     }
   }
 
   @media (min-width: 640px) {
-    .container {
-      max-width: 640px;
+    site-search > button {
+      padding-right: 3rem;
     }
   }
 
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1536px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    width: 100%;
+  .social-icons {
+    gap: 0;
   }
 
-  .markdown-wrapper {
-    padding-top: 2rem;
-    padding-bottom: 3rem;
+  .social-icons::after {
+    border-inline-end: 0;
   }
 
-  .markdown-wrapper:has(.container-section) {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  .button[data-variant='ghost'] {
+  .social-icons > a {
     align-items: center;
     background-color: transparent;
     border: none;
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 0.15s;
-    font-weight: 500;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    cursor: pointer;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 0;
     padding-right: 0;
-    border-radius: calc(var(--radius) - 2px);
-    white-space: nowrap;
-    gap: 0.5rem;
+    border-radius: calc(0.5rem - 2px);
+    display: inline-flex;
     justify-content: center;
+    align-items: center;
     width: 2rem;
     height: 2rem;
-    display: inline-flex;
-    cursor: pointer;
-  }
-
-  .button[data-variant='ghost']:hover {
-    color: var(--accent-foreground);
-    background-color: var(--accent);
-  }
-  /**
-  * mdx
-  */
-
-  .sl-markdown-content h1:not(:where(.not-content *)) {
-    letter-spacing: -0.025em;
-    font-weight: 800;
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    scroll-margin: 5rem;
     margin: 0;
   }
 
-  @media (min-width: 1024px) {
-    .sl-markdown-content h1:not(:where(.not-content *)) {
-      font-size: 3rem;
-      line-height: 1;
+  .social-icons > a:hover {
+    color: var(--accent-foreground);
+    background-color: var(--accent);
+    opacity: 1;
+  }
+
+  .social-icons > a > svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .right-group {
+    gap: 0.125rem;
+  }
+
+  .sidebar-pane {
+    /* border-inline-end: 0; */
+    /* border-color: var(--border);
+    border-style: dashed; */
+    border-inline: 1px dashed var(--border);
+  }
+
+  @media (min-width: 800px) {
+    .sidebar-pane {
+      width: 265px;
+      margin-left: max(
+        0.5rem,
+        calc(
+          (
+              100% - var(--__toc-width, var(--sl-sidebar-width)) - (2 * var(--__toc-width, 1.5rem)) -
+                var(--sl-content-inline-start, 0rem) - var(--sl-content-width)
+            ) /
+            2 - 1rem /* <-- Ajusta este valor para mover más a la izquierda */
+        )
+      );
     }
   }
 
-  .sl-markdown-content h2:not(:where(.not-content *)) {
-    letter-spacing: -0.025em;
-    font-weight: 600;
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-    padding-bottom: 0.5rem;
+  @media (min-width: 72rem) {
+    [data-has-sidebar][data-has-toc] .main-pane {
+      --sl-content-margin-inline: 9rem 0rem;
+    }
+  }
+
+  .right-sidebar-container > .right-sidebar {
+    border-inline-start: 0;
+    border-inline-end: 1px dashed var(--border);
+  }
+
+  .right-sidebar-container {
+    width: 200px;
+  }
+
+  @media (min-width: 72rem) {
+    .right-sidebar-container > .right-sidebar {
+      width: 340px;
+    }
+  }
+
+  .sidebar-content li {
+    border: 0;
+  }
+
+  .content-panel + .content-panel {
+    border: 0;
+  }
+
+  /*
+  header.header {
+    -webkit-backdrop-filter: blur(1rem);
+    backdrop-filter: blur(1rem);
     border-bottom-width: 1px;
-    scroll-margin: 5rem;
-    margin: 0;
-  }
-
-  .sl-markdown-content h2:not(:where(.not-content *)):first-child {
-    margin-top: 0;
-  }
-
-  .sl-markdown-content h3:not(:where(.not-content *)) {
-    letter-spacing: -0.025em;
-    font-weight: 600;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    scroll-margin: 5rem;
-    margin: 0;
-  }
-
-  .sl-markdown-content h4:not(:where(.not-content *)) {
-    letter-spacing: -0.025em;
-    font-weight: 600;
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-    scroll-margin: 5rem;
-    margin: 0;
-  }
-
-  .sl-markdown-content p:not(:where(.not-content *)):not(li p) {
-    line-height: 1.75rem;
-  }
-
-  .sl-markdown-content p:first-child:not(:where(.not-content *)):not(li p) {
-    margin-top: 1.5rem;
-  }
-
-  .sl-markdown-content blockquote:not(:where(.not-content *)) {
-    font-style: italic;
-    padding-left: 1.5rem;
-    border-left-width: 2px;
-    border-left-style: solid;
-    margin-top: 1.5rem;
-    margin: 0;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) {
-    width: 100%;
-    text-indent: 0;
-    border-color: inherit;
-    border-collapse: collapse;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > thead > tr {
+    border-style: dashed;
+    border-bottom-color: var(--border);
     padding: 0;
-    border-top-width: 1px;
-    border-top-style: solid;
-    margin: 0;
+    background-color: color-mix(in oklab, var(--sl-color-bg-sidebar) 60%, transparent);
   }
 
-  .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th {
+  header.header > .header {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 1400px;
+    border-style: dashed;
+    padding-inline-end: 0;
+  }
+
+  [data-has-sidebar] .header {
+    padding-inline-end: 0;
+  }
+
+  header.header > .header > .title-wrapper {
+    padding-left: 1rem;
+  }
+
+  header.header > .header > .title-wrapper > .site-title {
     font-weight: 700;
-    padding-top: 0.5rem;
-    text-align: left;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    border-width: 1px;
-    border-style: solid;
+    font-size: var(--text-base);
+    gap: 0.5rem;
+  }
+  header.header > .header > .title-wrapper > .site-title > img {
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
-  .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th[align='right'] {
-    text-align: right;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th[align='center'] {
-    text-align: center;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr {
-    margin: 0;
-    border-top-width: 1px;
-    padding: 0;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr:nth-child(even) {
-    background-color: var(--muted);
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td {
-    text-align: left;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    border-width: 1px;
-    border-style: solid;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td[align='right'] {
-    text-align: right;
-  }
-
-  .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td[align='center'] {
-    text-align: center;
-  }
-
-  .sl-markdown-content ul:not(:where(.not-content *)) {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-left: 1.5rem;
-    list-style-type: disc;
-  }
-
-  .sl-markdown-content ul:not(:where(.not-content *)) > li {
-    margin-top: 0.5rem;
-  }
-
-  .sl-markdown-content code:not(:where(.not-content *)) {
-    position: relative;
-    border-radius: 0.25rem;
-    background-color: var(--muted);
-    padding-left: 0.3rem;
-    padding-right: 0.3rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
-    font-family: var(--sl-font-mono), monospace;
-    font-size: 0.875rem;
-    font-weight: 600;
-  }
-
-  .sl-markdown-content a:not(:where(.not-content *)) {
-    font-weight: 500;
-    text-decoration: underline;
-    text-underline-offset: 4px;
-    color: inherit;
-  }
-
-  .callout {
-    color: var(--foreground);
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background-color: color-mix(in oklab, var(--muted) 50%, transparent);
-    border-width: 1px;
-    border-radius: var(--radius);
-    border-style: solid;
-    width: 100%;
-    margin-top: 1.5rem;
-    position: relative;
-  }
-
-  .callout-description {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .callout-description > p {
-    line-height: 1.625 !important;
-    margin-top: 0 !important;
-  }
-
-  .container-padding {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .sl-banner {
-    border-radius: var(--radius);
-    margin-bottom: 1.5rem;
-    border-width: 1px;
-    border-color: var(--sl-color-banner-border);
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-left: 1rem;
+  header.header > .header > .right-group {
     padding-right: 1rem;
   }
+
+  @media (min-width: 1400px) {
+    header.header > .header {
+      border-left: 1px dashed var(--sl-color-hairline);
+      border-right: 1px dashed var(--sl-color-hairline);
+    }
+  }
+
+  @media (min-width: 1280px) {
+    header.header > .header > .title-wrapper {
+      padding-left: 1.5rem;
+    }
+
+    header.header > .header > .right-group {
+      padding-right: 1.5rem;
+    }
+  }
+
+  header.header > .header > div.sl-flex:has(site-search) {
+    justify-self: end;
+    min-width: 15rem;
+  }*/
 }
