--- a/src/overrides/SidebarSublist.astro
+++ b/src/overrides/SidebarSublist.astro
@@ -45,8 +45,8 @@ const { sublist, nested } = Astro.props
     line-height: 1.25rem;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
     border-radius: calc(var(--radius) - 2px);
   }
 
@@ -63,12 +63,10 @@ const { sublist, nested } = Astro.props
     text-underline-offset: 2px;
     color: var(--accent-foreground);
     font-weight: 500;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding: 0.5rem 0.75rem;
     border-radius: var(--radius);
     align-items: center;
     width: 100%;
-    height: 2rem;
     display: flex;
     color: inherit;
     text-decoration: inherit;
