--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -173,15 +173,24 @@
     }
   }
 
+  .sl-markdown-content .sl-heading-wrapper.level-h2 {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    border-top-width: 1px;
+    border-top-style: solid;
+    border-color: var(--border);
+    padding-top: 1.5rem;
+  }
+
   .sl-markdown-content h2:not(:where(.not-content *)) {
     letter-spacing: -0.025em;
     font-weight: 600;
     font-size: 1.875rem;
     line-height: 2.25rem;
     padding-bottom: 0.5rem;
-    border-bottom-width: 1px;
     scroll-margin: 5rem;
     margin: 0;
+    font-size: 1.5rem;
   }
 
   .sl-markdown-content h2:not(:where(.not-content *)):first-child {
@@ -195,6 +204,10 @@
     line-height: 2rem;
     scroll-margin: 5rem;
     margin: 0;
+    font-size: 1.25rem;
+    margin-top: 2.4rem;
+    margin-bottom: 0.6rem;
+    line-height: 1.4;
   }
 
   .sl-markdown-content h4:not(:where(.not-content *)) {
@@ -217,7 +230,7 @@
   .sl-markdown-content blockquote:not(:where(.not-content *)) {
     font-style: italic;
     padding-left: 1.5rem;
-    border-left-width: 2px;
+    border-left-width: 4px;
     border-left-style: solid;
     margin-top: 1.5rem;
     margin: 0;
@@ -315,6 +328,49 @@
     color: inherit;
   }
 
+  .sl-markdown-content h2:not(:where(.not-content *)),
+  .sl-markdown-content h3:not(:where(.not-content *)),
+  .sl-markdown-content h4:not(:where(.not-content *)),
+  .sl-markdown-content h5:not(:where(.not-content *)),
+  .sl-markdown-content h6:not(:where(.not-content *)) {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    padding-inline-end: none !important;
+  }
+
+  .sl-heading-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  .sl-heading-wrapper .sl-anchor-link {
+    position: absolute;
+    margin-inline-start: 0 !important;
+  }
+
+  .sl-heading-wrapper .sl-anchor-link .sl-anchor-icon {
+    width: 1.6rem;
+    height: 1.6rem;
+    background: #fff;
+    border: 1px solid var(--border);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 2px var(--border);
+    transform: translateX(-125%);
+  }
+
+  .sl-markdown-content .sl-anchor-icon > svg {
+    display: block;
+    width: initial;
+    transform: none;
+    vertical-align: initial;
+  }
+
   .callout {
     color: var(--foreground);
     font-size: 0.875rem;
@@ -358,5 +414,21 @@
     padding-bottom: 0.75rem;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .expressive-code .frame {
+    box-shadow: none;
+  }
+
+  .expressive-code pre {
+    border-radius: 0.25rem;
+  }
+
+  .markdown-wrapper {
+    padding-top: 0 !important;
+  }
+
+  h1 {
+    margin-top: calc(var(--spacing) * 12) !important;
   }
 }
