--- a/src/overrides/PageTitle.astro
+++ b/src/overrides/PageTitle.astro
@@ -10,9 +10,20 @@ const {
 
 {
   template === 'doc' && (
-    <div class="breadcrumb">
+    <button class="breadcrumb" popovertargetaction="toggle" popovertarget="drawer">
+      <svg
+        class="menu-icon"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5" />
+      </svg>
       <div class="truncate">Docs</div>
       <svg
+        class="arrow-icon"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
@@ -26,7 +37,8 @@ const {
         <path d="m9 18 6-6-6-6" />
       </svg>
       <div class="text-foreground">{title}</div>
-    </div>
+      <span class="sr-only">Toggle Menu</span>
+    </button>
   )
 }
 
@@ -81,12 +93,23 @@ const {
 
 <style>
   .breadcrumb {
+    all: unset;
     color: var(--muted-foreground);
     line-height: 1;
     font-size: 0.875rem;
     align-items: center;
     display: flex;
     margin-bottom: 1rem;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+  }
+
+  @media (min-width: 768px) {
+    .breadcrumb {
+      cursor: default;
+      pointer-events: none;
+    }
   }
 
   .truncate {
@@ -95,10 +118,34 @@ const {
     text-overflow: ellipsis;
   }
 
-  .breadcrumb svg {
+  .menu-icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 0.5rem;
+  }
+
+  @media (min-width: 768px) {
+    .menu-icon {
+      display: none;
+    }
+  }
+
+  .arrow-icon {
     width: 0.875rem;
     height: 0.875rem;
     margin-left: 0.5rem;
+  }
+
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
   }
 
   .text-foreground {
